roles/openshift-apps/waiverdb/files/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: waiverdb-web
  labels:
    app: waiverdb
spec:
  selector:
    app: waiverdb
    service: web
  ports:
  - name: web
    port: 8080
    targetPort: 8080
