roles/openshift-apps/waiverdb/files/route.yml
---
apiVersion: v1
kind: Route
metadata:
  name: waiverdb-web
  labels:
    app: waiverdb
spec:
  # host: waiverdb.stg.fedoraproject.org
  port:
    targetPort: web
  to:
    kind: Service
    name: waiverdb-web
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
